restore byte based things that were lost when updating from janino svn